[tool.poetry]
name = "plum-dispatch"
homepage = "https://github.com/wesselb/plum"
documentation = "https://github.com/wesselb/plum"
authors=[ "Wessel Bruinsma <wessel.p.bruinsma@gmail.com>"]
license = "MIT"
description="Multiple dispatch in Python"
readme = "README.md"
keywords = ["Machine Learning", "Quantum", "Neural Networks", "Jax", "Monte Carlo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
]
version = "0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6"
pytest-cov = ">=2.10.1"
black = "==22.3.0"
pre-commit = ">=2.7"
coveralls = "*"
IPython = ">=7.0.0"
numpy = "~=1.19"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
